tests/snapshots/examples_fixtures/type_system__failing__12_generic_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/12_generic_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `both` has the wrong type.

  --> examples/type_system/failing/12_generic_mismatch.flx:7:10
  |
5 | fn both<T>(a: T, b: T) -> T { a }

  | --------------------------------- `both` expects `Int` as the 2nd parameter
6 | 

7 | both(42, "hello")
  |          ^^^^^^^
  |          ------- this argument is `String`

Help:
  Expected `Int` as the 2nd argument.
== stdout ==
<not executed>
